# hevy-progressive-overloader

./: .env.example  AGENTS.md  Cargo.toml  Dockerfile  README.md  docker-compose.yml
src/: config.rs  main.rs  scheduler.rs
src/api/: webhooks.rs
src/clients/: gemini.rs  hevy.rs  mod.rs
src/clients/models/: common.rs  requests.rs  responses.rs
src/services/: ai_parser.rs  ai_prompt.rs  deload.rs  mod.rs  output_formatter.rs  progressive_overload.rs
