[package]
name = "hevy-progressive-overloader"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower-http = { version = "0.6.6", features = ["cors"] }
anyhow = "1.0.100"
reqwest = "0.12.23"
dotenvy = "0.15.7"
gemini-rust = "1.4.0"
regex = "1.10"
thiserror = "2.0.16"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
